feat: render initial data via faker js

--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -53,8 +53,8 @@
 }
 .content .spinner {
   position: absolute;
-  left: 50%;
-  top: 200px;
+  left: 40%;
+  top: 45%;
 }
 .content .row {
   display: flex;
